<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:text="@string/instruction_title"
        android:textAlignment="center"
        android:textSize="@dimen/status_text_size"
        android:layout_marginTop="@dimen/layout_margin"
        android:layout_marginStart="@dimen/layout_margin"
        android:layout_marginEnd="@dimen/layout_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:textSize="@dimen/text_size"
        android:layout_marginTop="@dimen/layout_margin"
        android:layout_marginStart="@dimen/layout_margin"
        android:layout_marginEnd="@dimen/layout_margin"
        android:text="@string/instruction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/enter_button"
        android:layout_marginTop="@dimen/layout_margin"
        android:layout_marginStart="@dimen/layout_margin"
        android:layout_marginEnd="@dimen/layout_margin"
        android:layout_width="match_parent"
        android:backgroundTint="@color/normal_element"
        android:textColor="@color/element_status_text_color"
        android:layout_height="wrap_content"
        android:textSize="@dimen/status_text_size"
        android:text="@string/connect_device"/>

</LinearLayout>